<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/elcielo"
            android:orientation="vertical"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">
                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tElcielo"
                    android:textColor="@color/white"
                    android:paddingLeft="10sp"
                    android:paddingBottom="5sp"
                    android:layout_gravity="bottom"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/elcielologo"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="10">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:autoLink="web"
                    android:text="@string/tElcielo1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/tElcielo2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/tElcielo3"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:id="@+id/elcieloFacebook"
                android:src="@drawable/facebook"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:id="@+id/elcieloYoutube"
                android:src="@drawable/youtube"/>
        </LinearLayout>
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/tAboutRestaurant"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/tAboutElcielo"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>

