<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/santafe"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">
                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tCinecolombia"
                    android:textColor="@color/white"
                    android:paddingLeft="10sp"
                    android:paddingBottom="5sp"
                    android:layout_gravity="bottom"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/cinecolombia"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="10">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:paddingRight="15dp"
                    android:text="@string/tCinecolombia1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="15dp"
                    android:text="@string/tCinecolombia2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="15dp"
                    android:textSize="13dp"
                    android:autoLink="web"
                    android:text="@string/tCinecolombia3"/>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/tOtrosCinecolombia"/>
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cinecolombiaList"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>